<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    android:gravity="center|top"
    tools:context=".InsertContactActivity">

    <ImageView
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/todo" />
    <EditText
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:autofillHints="name"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:autofillHints="phone"
        android:inputType="phone" />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"/>

</LinearLayout>