<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="7dp"
    android:paddingRight="7dp"
    android:paddingBottom="3dp"
    android:paddingTop="3dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        >
        <RelativeLayout
            android:gravity="center|top"
            android:background="#ffffff"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_centerInParent="true"
                android:id="@+id/list_item_img"
                android:layout_width="64dp"
                android:layout_alignParentStart="true"
                android:layout_height="64dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/list_item_img"
                android:textStyle="bold"
                android:text="@string/mahdi"
                android:textColor="#000000"
                android:id="@+id/list_item_txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_toEndOf="@id/list_item_img"
                android:layout_below="@id/list_item_txtName"
                android:text="@string/_0912000000"
                android:textSize="13sp"
                android:id="@+id/list_item_txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:text="@string/bagheri_gmail_com"
                android:id="@+id/list_item_txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>